# obsidian

./: .gitignore  CMakeLists.txt  README.md
cmake/: Finduring.cmake
server/: CMakeLists.txt  main.cpp
server/include/obsidian/: log.h  memory.h  server.h
server/include/obsidian/minecraft/: protocol.h
server/io/: file_descriptor.cpp  file_descriptor.hpp
server/net/: listener.cpp  listener.hpp  socket.cpp  socket.hpp
server/src/: log.c  main.c  server.c
server/src/memory/: pool_allocator.c  ring_buffer.c
server/src/minecraft/: protocol.c
